Fixed blockquote sizing on mobile.

--- a/dfurnes.scss
+++ b/dfurnes.scss
@@ -574,10 +574,6 @@ span.label {
 		width: 264px;
 	}
 	
-	blockquote {
-		width: 259px;
-	}
-	
 	div.post {
 		width: 264px;
 	}
@@ -585,6 +581,7 @@ span.label {
 	blockquote {
 		background: url('http://www.dfurnes.com/images/quote.png') no-repeat 5px 0;
 		background-size: 30px 30px;
+		width: 209px;
 	}
 	
 	.post h2 {
